align fix with menu items

--- a/source/assets/stylesheets/components/_menu.scss
+++ b/source/assets/stylesheets/components/_menu.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
 
   a {
+    min-width: 10%;
     color: gray;
     transition: ease-in-out .4s;
   }
